--- a/yourorders.html
+++ b/yourorders.html
@@ -1,117 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>My Orders — Hamsa Sarees</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Hamsa Sarees — Confirm & Pay</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
 :root{
-  --bg1:#001f3f; --bg2:#00306b;
-  --accent:#00aaff; --accent2:#4dd0e1;
-  --muted:#9fb8d9; --success:#10b981;
+  --bg1:#0a0e1a;
+  --bg2:#0f152e;
+  --gold:#e6b566;
+  --text:#eef2ff;
+  --muted:#9fb0d1;
+  --border:rgba(255,255,255,0.08);
+  --danger:#ff6b6b;
+  --success:#3ddc97;
 }
-*{box-sizing:border-box}
-html,body{
-  margin:0;height:100%;
+
+*{box-sizing:border-box;margin:0;padding:0}
+
+body{
+  margin:0;
   font-family:Inter,system-ui,Arial,sans-serif;
-  background:linear-gradient(180deg,var(--bg1),var(--bg2));
-  color:#eaf6ff
+  background:linear-gradient(180deg,#080c18,#0a0e1a);
+  color:var(--text);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  min-height:100vh;
+  padding:20px;
 }
-.container{max-width:1100px;margin:20px auto;padding:0 16px}
-header{
-  display:flex;justify-content:space-between;align-items:center;
-  background:rgba(255,255,255,0.02);
-  padding:12px;border-radius:12px;margin-bottom:20px
+
+.card{
+  background:linear-gradient(180deg,#141c3f,#0f1533);
+  border-radius:16px;
+  padding:28px;
+  max-width:480px;
+  width:100%;
+  box-shadow:0 20px 60px rgba(0,0,0,.6);
+  border:1px solid var(--border);
 }
-.logo{
-  width:44px;height:44px;border-radius:10px;
-  background:linear-gradient(135deg,var(--accent),var(--accent2));
-  display:flex;align-items:center;justify-content:center;
-  font-weight:800;color:#032033
+
+h1{
+  margin:0 0 8px;
+  font-size:24px;
+  font-weight:800;
+  color:var(--text);
 }
-.actions{display:flex;gap:8px;align-items:center}
-.btn,.btn-ghost{
-  padding:9px 14px;border-radius:10px;
-  font-weight:700;cursor:pointer
+
+.small{
+  color:var(--muted);
+  font-size:14px;
+  margin-bottom:20px;
+  display:block;
 }
-.btn{
-  border:none;color:#fff;
-  background:linear-gradient(90deg,var(--accent),#ff5aa3)
+
+.row{
+  margin-bottom:16px;
 }
-.btn-ghost{
-  background:transparent;border:1px solid rgba(255,255,255,.15);
-  color:#fff
+
+label{
+  display:block;
+  font-size:13px;
+  color:var(--muted);
+  margin-bottom:6px;
+  font-weight:600;
 }
-.order-card{
-  background:#071522;border-radius:12px;
-  padding:16px;margin-bottom:12px;
-  display:flex;justify-content:space-between;gap:12px
+
+input,textarea{
+  width:100%;
+  padding:12px;
+  border-radius:12px;
+  border:1px solid var(--border);
+  background:#0f1738;
+  color:var(--text);
+  font-size:14px;
+  font-family:inherit;
+  transition:border-color 0.2s ease;
 }
-.order-info strong{display:block;font-size:16px;margin-bottom:6px}
-.small{font-size:14px;color:var(--muted)}
-img{border-radius:8px}
-.modal{
-  position:fixed;inset:0;display:none;
-  background:rgba(0,0,0,.6);
-  align-items:center;justify-content:center
+
+input:focus,textarea:focus{
+  outline:none;
+  border-color:var(--gold);
 }
-.modal.show{display:flex}
-.modal-box{
-  background:#071522;border-radius:12px;
-  padding:20px;max-width:700px;width:100%
+
+input:read-only{
+  opacity:0.7;
+  cursor:not-allowed;
 }
-.toast{
-  position:fixed;right:16px;bottom:16px;
-  background:#0b1220;padding:10px 14px;
-  border-radius:10px;border-left:4px solid var(--success);
-  display:none
+
+textarea{
+  min-height:90px;
+  resize:vertical;
+}
+
+.price{
+  font-size:28px;
+  font-weight:900;
+  color:var(--gold);
+  margin:12px 0;
+}
+
+button{
+  width:100%;
+  padding:14px;
+  border-radius:12px;
+  border:none;
+  background:linear-gradient(90deg,var(--gold),#f3d48c);
+  color:#3b2b08;
+  font-weight:800;
+  font-size:15px;
+  cursor:pointer;
+  transition:transform 0.2s ease;
+}
+
+button:hover:not(:disabled){
+  transform:translateY(-1px);
+}
+
+button:disabled{
+  opacity:0.6;
+  cursor:not-allowed;
+}
+
+.product-img{
+  max-width:100%;
+  max-height:280px;
+  object-fit:cover;
+  border-radius:12px;
+  margin-bottom:16px;
+  display:none;
+  width:100%;
+}
+
+.product-img.show{
+  display:block;
+}
+
+.error-msg{
+  background:rgba(255,107,107,0.1);
+  border:1px solid var(--danger);
+  color:var(--danger);
+  padding:12px;
+  border-radius:10px;
+  margin-bottom:16px;
+  font-size:13px;
+  display:none;
+}
+
+.error-msg.show{
+  display:block;
+}
+
+.spinner{
+  border:3px solid rgba(255,255,255,0.1);
+  border-top:3px solid var(--gold);
+  border-radius:50%;
+  width:20px;
+  height:20px;
+  animation:spin 0.8s linear infinite;
+  display:inline-block;
+  margin-right:8px;
+}
+
+@keyframes spin{
+  0%{transform:rotate(0deg)}
+  100%{transform:rotate(360deg)}
+}
+
+.alert{
+  background:rgba(61,220,151,0.1);
+  border:1px solid var(--success);
+  color:var(--success);
+  padding:12px;
+  border-radius:10px;
+  margin-bottom:16px;
+  font-size:13px;
+}
+
+.back-link{
+  display:inline-block;
+  margin-bottom:16px;
+  color:var(--gold);
+  text-decoration:none;
+  font-size:13px;
+  font-weight:600;
+}
+
+.back-link:hover{
+  text-decoration:underline;
+}
+
+@media(max-width:480px){
+  .card{
+    padding:20px;
+  }
+  h1{
+    font-size:20px;
+  }
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
-  <header>
-    <div style="display:flex;gap:12px;align-items:center">
-      <div class="logo">HS</div>
-      <div>
-        <strong>Hamsa Sarees</strong><br>
-        <span class="small">My Orders</span>
-      </div>
-    </div>
-    <div class="actions">
-      <span id="userBadge" class="small" style="display:none"></span>
-      <button id="loginBtn" class="btn">Sign in</button>
-      <button id="logoutBtn" class="btn-ghost" style="display:none">Sign out</button>
-      <a href="index.html" class="btn-ghost">Back</a>
-    </div>
-  </header>
+<div class="card">
+  <a href="index.html" class="back-link">← Back to Store</a>
+  
+  <h1>Confirm & Pay</h1>
+  <span class="small">Please verify all details carefully before payment</span>
 
-  <div id="ordersContainer" class="small" style="text-align:center;padding:40px">
-    Please sign in to view your orders
+  <div id="errorMsg" class="error-msg"></div>
+
+  <div class="row">
+    <img id="productImg" class="product-img" alt="Product image">
   </div>
+
+  <div class="row">
+    <label>Product</label>
+    <input id="product" readonly />
+  </div>
+
+  <div class="row">
+    <label>Amount to Pay</label>
+    <div class="price" id="priceText">₹0</div>
+  </div>
+
+  <div class="row">
+    <label>Your Name</label>
+    <input id="name" required />
+  </div>
+
+  <div class="row">
+    <label>Mobile Number</label>
+    <input id="phone" type="tel" required placeholder="10-digit number" />
+  </div>
+
+  <div class="row">
+    <label>Delivery Address</label>
+    <textarea id="address" required placeholder="Complete address with pincode"></textarea>
+  </div>
+
+  <button id="payBtn" disabled>
+    <span id="btnText">Initializing...</span>
+  </button>
 </div>
 
-<!-- MODAL -->
-<div class="modal" id="orderModal">
-  <div class="modal-box">
-    <button id="closeModal" class="btn-ghost" style="float:right">Close</button>
-    <h2>Order Details</h2>
-    <pre id="orderDetails" class="small"></pre>
-  </div>
-</div>
-
-<div id="toast" class="toast"></div>
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getFirestore, collection, query, orderBy, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getFirestore, doc, setDoc, getDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
+/* ==================== FIREBASE CONFIG ==================== */
 const firebaseConfig = {
   apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
   authDomain: "hamsasarees-24738.firebaseapp.com",
@@ -121,97 +265,254 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
-const provider = new GoogleAuthProvider();
 
-const ordersContainer = document.getElementById('ordersContainer');
-const userBadge = document.getElementById('userBadge');
-const loginBtn = document.getElementById('loginBtn');
-const logoutBtn = document.getElementById('logoutBtn');
-const modal = document.getElementById('orderModal');
-const orderDetails = document.getElementById('orderDetails');
+/* ==================== DOM ELEMENTS ==================== */
+const productEl = document.getElementById('product');
+const priceText = document.getElementById('priceText');
+const nameEl = document.getElementById('name');
+const phoneEl = document.getElementById('phone');
+const addressEl = document.getElementById('address');
+const imgEl = document.getElementById('productImg');
+const payBtn = document.getElementById('payBtn');
+const btnText = document.getElementById('btnText');
+const errorMsg = document.getElementById('errorMsg');
 
-async function loadOrders(){
-  if(!auth.currentUser) return;
+/* ==================== UTILITY FUNCTIONS ==================== */
+function showError(message) {
+  errorMsg.textContent = message;
+  errorMsg.classList.add('show');
+}
 
-  ordersContainer.innerHTML = 'Loading...';
+function hideError() {
+  errorMsg.classList.remove('show');
+}
 
-  const q = query(
-    collection(db, `users/${auth.currentUser.uid}/orders`),
-    orderBy('createdAt','desc')
-  );
-  const snap = await getDocs(q);
+function setBtnState(disabled, text) {
+  payBtn.disabled = disabled;
+  btnText.textContent = text;
+}
 
-  if(snap.empty){
-    ordersContainer.innerHTML = 'No orders yet';
+function validatePhone(phone) {
+  return /^[6-9]\d{9}$/.test(phone);
+}
+
+/* ==================== LOAD ORDER DATA ==================== */
+const raw = sessionStorage.getItem('pendingOrder');
+if (!raw) {
+  showError('Invalid access. Redirecting...');
+  setTimeout(() => location.href = 'index.html', 2000);
+  throw new Error('No pending order');
+}
+
+let order;
+try {
+  order = JSON.parse(raw);
+} catch (e) {
+  showError('Invalid order data. Redirecting...');
+  setTimeout(() => location.href = 'index.html', 2000);
+  throw new Error('Invalid JSON');
+}
+
+/* ==================== VALIDATE ORDER DATA ==================== */
+const price = Number(order.price);
+if (!order.product || !price || price <= 0) {
+  showError('Invalid order details. Redirecting...');
+  setTimeout(() => location.href = 'index.html', 2000);
+  throw new Error('Invalid order');
+}
+
+/* ==================== POPULATE FORM ==================== */
+productEl.value = order.product || '';
+priceText.textContent = `₹${price}`;
+nameEl.value = order.name || '';
+phoneEl.value = order.phone || '';
+addressEl.value = order.address || '';
+
+if (order.image) {
+  imgEl.src = order.image;
+  imgEl.onload = () => imgEl.classList.add('show');
+  imgEl.onerror = () => console.warn('Failed to load product image');
+}
+
+/* ==================== AUTH & PAYMENT HANDLER ==================== */
+onAuthStateChanged(auth, async (user) => {
+  if (!user) {
+    showError('Please sign in first. Redirecting...');
+    setTimeout(() => location.href = 'index.html', 2000);
     return;
   }
 
-  ordersContainer.innerHTML = '';
-
-  snap.forEach(d=>{
-    const o = d.data();
-    const card = document.createElement('div');
-    card.className = 'order-card';
-    card.innerHTML = `
-      <div style="display:flex;gap:12px">
-        ${o.image ? `<img src="${o.image}" width="70" height="90">` : ''}
-        <div class="order-info">
-          <strong>${o.product}</strong>
-          <div class="small">${o.name}</div>
-          <div class="small">₹${o.price}</div>
-        </div>
-      </div>
-      <div>
-        <button class="btn-ghost viewBtn" data-id="${d.id}">View</button>
-      </div>
-    `;
-    ordersContainer.appendChild(card);
-  });
-}
-
-ordersContainer.addEventListener('click', async e=>{
-  const view = e.target.closest('.viewBtn');
-  if(!view) return;
-
-  const uid = auth.currentUser.uid;
-  const id = view.dataset.id;
-
-  const snap = await getDocs(collection(db,`users/${uid}/orders`));
-  snap.forEach(d=>{
-    if(d.id===id){
-      const o=d.data();
-      orderDetails.textContent =
-`Product: ${o.product}
-Price: ₹${o.price}
-Name: ${o.name}
-Phone: ${o.phone}
-Address:
-${o.address}
-Payment ID:
-${o.paymentId}
-Status: ${o.status || 'Processing'}`;
-      modal.classList.add('show');
+  // ✅ SECURITY: Verify price from Firestore product document
+  let verifiedPrice = price;
+  try {
+    if (order.productId) {
+      const productDoc = await getDoc(doc(db, 'products', order.productId));
+      if (productDoc.exists()) {
+        verifiedPrice = productDoc.data().price;
+        if (verifiedPrice !== price) {
+          showError(`Price mismatch! Current price is ₹${verifiedPrice}`);
+          priceText.textContent = `₹${verifiedPrice}`;
+          order.price = verifiedPrice;
+        }
+      }
     }
-  });
-});
-
-document.getElementById('closeModal').onclick=()=>modal.classList.remove('show');
-loginBtn.onclick=()=>signInWithPopup(auth,provider);
-logoutBtn.onclick=()=>signOut(auth);
-
-onAuthStateChanged(auth,user=>{
-  if(user){
-    userBadge.style.display='inline';
-    userBadge.textContent=user.email;
-    loginBtn.style.display='none';
-    logoutBtn.style.display='inline';
-    loadOrders();
-  }else{
-    ordersContainer.innerHTML='Please sign in to view your orders';
-    userBadge.style.display='none';
-    loginBtn.style.display='inline';
-    logoutBtn.style.display='none';
+  } catch (e) {
+    console.warn('Could not verify price:', e);
+    // Continue with session price if verification fails
   }
+
+  setBtnState(false, 'Pay Securely with Razorpay');
+  hideError();
+
+  payBtn.onclick = async () => {
+    const name = nameEl.value.trim();
+    const phone = phoneEl.value.replace(/\s+/g, '');
+    const address = addressEl.value.trim();
+
+    // Validation
+    if (!name || name.length < 2) {
+      showError('Please enter a valid name');
+      nameEl.focus();
+      return;
+    }
+
+    if (!validatePhone(phone)) {
+      showError('Please enter a valid 10-digit mobile number starting with 6-9');
+      phoneEl.focus();
+      return;
+    }
+
+    if (!address || address.length < 10) {
+      showError('Please enter complete delivery address');
+      addressEl.focus();
+      return;
+    }
+
+    hideError();
+    setBtnState(true, 'Processing...');
+
+    // Create order ID
+    const orderId = `HS${Date.now()}${Math.random().toString(36).substr(2, 5)}`.toUpperCase();
+
+    // ✅ SAVE ORDER TO FIRESTORE FIRST (before payment)
+    try {
+      await setDoc(doc(db, 'users', user.uid, 'orders', orderId), {
+        orderId: orderId,
+        product: order.product,
+        productId: order.productId || '',
+        price: verifiedPrice,
+        name: name,
+        phone: phone,
+        address: address,
+        image: order.image || '',
+        email: user.email || '',
+        userId: user.uid,
+        status: 'pending',
+        paymentId: null,
+        createdAt: serverTimestamp(),
+        updatedAt: serverTimestamp()
+      });
+    } catch (error) {
+      console.error('Failed to create order:', error);
+      showError('Failed to create order. Please try again.');
+      setBtnState(false, 'Pay Securely with Razorpay');
+      return;
+    }
+
+    // ✅ RAZORPAY PAYMENT
+    const rzpOptions = {
+      key: 'rzp_live_Rqulhc8rZRz8Iw',
+      amount: Math.round(verifiedPrice * 100),
+      currency: 'INR',
+      name: 'Hamsa Sarees',
+      description: order.product,
+      order_id: undefined, // In production, get this from backend
+      prefill: {
+        name: name,
+        contact: phone,
+        email: user.email || ''
+      },
+      notes: {
+        order_id: orderId,
+        user_id: user.uid
+      },
+      theme: {
+        color: '#e6b566'
+      },
+
+      handler: async function(response) {
+        try {
+          // ✅ UPDATE ORDER STATUS
+          await setDoc(doc(db, 'users', user.uid, 'orders', orderId), {
+            paymentId: response.razorpay_payment_id,
+            status: 'paid',
+            paidAt: serverTimestamp(),
+            updatedAt: serverTimestamp()
+          }, { merge: true });
+
+          // ✅ SUBMIT TO GOOGLE FORMS (backup)
+          const formData = new FormData();
+          formData.append('entry.2120009411', name);
+          formData.append('entry.6103303', phone);
+          formData.append('entry.952475985', order.product);
+          formData.append('entry.2008322116', address);
+          formData.append('entry.135044268', verifiedPrice);
+
+          fetch('https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse', {
+            method: 'POST',
+            body: formData,
+            mode: 'no-cors'
+          }).catch(e => console.warn('Form submission failed:', e));
+
+          // Clear session
+          sessionStorage.removeItem('pendingOrder');
+
+          // Success redirect
+          alert('✅ Payment successful! Thank you for your order.');
+          location.href = 'yourorders.html';
+
+        } catch (error) {
+          console.error('Post-payment error:', error);
+          alert('Payment received but order update failed. Please contact support with Payment ID: ' + response.razorpay_payment_id);
+          location.href = 'yourorders.html';
+        }
+      },
+
+      modal: {
+        ondismiss: function() {
+          setBtnState(false, 'Pay Securely with Razorpay');
+        }
+      }
+    };
+
+    try {
+      const rzp = new Razorpay(rzpOptions);
+
+      rzp.on('payment.failed', async function(response) {
+        console.error('Payment failed:', response.error);
+        
+        // Update order status to failed
+        try {
+          await setDoc(doc(db, 'users', user.uid, 'orders', orderId), {
+            status: 'failed',
+            failureReason: response.error.description || 'Payment failed',
+            updatedAt: serverTimestamp()
+          }, { merge: true });
+        } catch (e) {
+          console.error('Failed to update order status:', e);
+        }
+
+        showError('Payment failed: ' + (response.error.description || 'Unknown error'));
+        setBtnState(false, 'Retry Payment');
+      });
+
+      rzp.open();
+    } catch (error) {
+      console.error('Razorpay error:', error);
+      showError('Payment gateway error. Please try again.');
+      setBtnState(false, 'Pay Securely with Razorpay');
+    }
+  };
 });
 </script>
 
