--- a/payment.html
+++ b/payment.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,201 +6,79 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Hamsa Sarees — Confirm & Pay</title>
 
+<meta http-equiv="Content-Security-Policy" content="
+  default-src 'self' https: data: blob:;
+  script-src 'self' 'unsafe-inline' https://checkout.razorpay.com https://www.gstatic.com;
+  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+  font-src https://fonts.gstatic.com data:;
+  frame-src https://checkout.razorpay.com https://api.razorpay.com;
+  connect-src https://api.razorpay.com https://checkout.razorpay.com
+               https://docs.google.com https://firestore.googleapis.com
+               https://identitytoolkit.googleapis.com https://www.gstatic.com;
+  img-src 'self' data: https: http:;
+" />
+
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
-:root{
-  --bg1:#0a0e1a;
-  --bg2:#0f152e;
-  --gold:#e6b566;
-  --text:#eef2ff;
-  --muted:#9fb0d1;
-  --border:rgba(255,255,255,0.08);
-  --danger:#ff6b6b;
-  --success:#3ddc97;
-}
-
-*{box-sizing:border-box;margin:0;padding:0}
-
 body{
   margin:0;
   font-family:Inter,system-ui,Arial,sans-serif;
-  background:linear-gradient(180deg,#080c18,#0a0e1a);
-  color:var(--text);
+  background:linear-gradient(180deg,#001f3f,#00306b);
+  color:#eaf6ff;
   display:flex;
   align-items:center;
   justify-content:center;
-  min-height:100vh;
-  padding:20px;
+  min-height:100vh
 }
-
 .card{
-  background:linear-gradient(180deg,#141c3f,#0f1533);
-  border-radius:16px;
-  padding:28px;
-  max-width:480px;
+  background:linear-gradient(180deg,#071522,#06121a);
+  border-radius:14px;
+  padding:24px;
+  max-width:420px;
   width:100%;
-  box-shadow:0 20px 60px rgba(0,0,0,.6);
-  border:1px solid var(--border);
+  box-shadow:0 20px 60px rgba(0,0,0,.45);
+  border:1px solid rgba(255,255,255,0.05)
 }
-
-h1{
-  margin:0 0 8px;
-  font-size:24px;
-  font-weight:800;
-  color:var(--text);
-}
-
-.small{
-  color:var(--muted);
-  font-size:14px;
-  margin-bottom:20px;
-  display:block;
-}
-
-.row{
-  margin-bottom:16px;
-}
-
-label{
-  display:block;
-  font-size:13px;
-  color:var(--muted);
-  margin-bottom:6px;
-  font-weight:600;
-}
-
+h1{margin:0 0 6px;font-size:22px;font-weight:800}
+.small{color:#9fb8d9;font-size:14px;margin-bottom:14px}
+.row{margin-bottom:12px}
+label{display:block;font-size:13px;color:#9fb8d9;margin-bottom:6px}
 input,textarea{
   width:100%;
   padding:12px;
-  border-radius:12px;
-  border:1px solid var(--border);
-  background:#0f1738;
-  color:var(--text);
-  font-size:14px;
-  font-family:inherit;
-  transition:border-color 0.2s ease;
+  border-radius:10px;
+  border:1px solid rgba(255,255,255,0.08);
+  background:#0b1220;
+  color:#fff;
+  font-size:14px
 }
-
-input:focus,textarea:focus{
-  outline:none;
-  border-color:var(--gold);
-}
-
-input:read-only{
-  opacity:0.7;
-  cursor:not-allowed;
-}
-
-textarea{
-  min-height:90px;
-  resize:vertical;
-}
-
+textarea{min-height:90px;resize:none}
 .price{
-  font-size:28px;
-  font-weight:900;
-  color:var(--gold);
-  margin:12px 0;
+  font-size:20px;
+  font-weight:800;
+  color:#4dd0e1;
+  margin:8px 0 14px
 }
-
 button{
   width:100%;
   padding:14px;
   border-radius:12px;
   border:none;
-  background:linear-gradient(90deg,var(--gold),#f3d48c);
-  color:#3b2b08;
+  background:linear-gradient(90deg,#00aaff,#ff5aa3);
+  color:#fff;
   font-weight:800;
   font-size:15px;
-  cursor:pointer;
-  transition:transform 0.2s ease;
+  cursor:pointer
 }
-
-button:hover:not(:disabled){
-  transform:translateY(-1px);
-}
-
-button:disabled{
-  opacity:0.6;
-  cursor:not-allowed;
-}
-
-.product-img{
+button:disabled{opacity:.6;cursor:not-allowed}
+img{
   max-width:100%;
-  max-height:280px;
+  max-height:260px;
   object-fit:cover;
   border-radius:12px;
-  margin-bottom:16px;
-  display:none;
-  width:100%;
-}
-
-.product-img.show{
-  display:block;
-}
-
-.error-msg{
-  background:rgba(255,107,107,0.1);
-  border:1px solid var(--danger);
-  color:var(--danger);
-  padding:12px;
-  border-radius:10px;
-  margin-bottom:16px;
-  font-size:13px;
-  display:none;
-}
-
-.error-msg.show{
-  display:block;
-}
-
-.spinner{
-  border:3px solid rgba(255,255,255,0.1);
-  border-top:3px solid var(--gold);
-  border-radius:50%;
-  width:20px;
-  height:20px;
-  animation:spin 0.8s linear infinite;
-  display:inline-block;
-  margin-right:8px;
-}
-
-@keyframes spin{
-  0%{transform:rotate(0deg)}
-  100%{transform:rotate(360deg)}
-}
-
-.alert{
-  background:rgba(61,220,151,0.1);
-  border:1px solid var(--success);
-  color:var(--success);
-  padding:12px;
-  border-radius:10px;
-  margin-bottom:16px;
-  font-size:13px;
-}
-
-.back-link{
-  display:inline-block;
-  margin-bottom:16px;
-  color:var(--gold);
-  text-decoration:none;
-  font-size:13px;
-  font-weight:600;
-}
-
-.back-link:hover{
-  text-decoration:underline;
-}
-
-@media(max-width:480px){
-  .card{
-    padding:20px;
-  }
-  h1{
-    font-size:20px;
-  }
+  margin-bottom:12px;
+  display:none
 }
 </style>
 </head>
@@ -207,16 +86,8 @@ button:disabled{
 <body>
 
 <div class="card">
-  <a href="index.html" class="back-link">← Back to Store</a>
-  
   <h1>Confirm & Pay</h1>
-  <span class="small">Please verify all details carefully before payment</span>
-
-  <div id="errorMsg" class="error-msg"></div>
-
-  <div class="row">
-    <img id="productImg" class="product-img" alt="Product image">
-  </div>
+  <div class="small">Please verify all details carefully</div>
 
   <div class="row">
     <label>Product</label>
@@ -224,7 +95,11 @@ button:disabled{
   </div>
 
   <div class="row">
-    <label>Amount to Pay</label>
+    <img id="productImg" alt="Product image">
+  </div>
+
+  <div class="row">
+    <label>Amount</label>
     <div class="price" id="priceText">₹0</div>
   </div>
 
@@ -234,39 +109,32 @@ button:disabled{
   </div>
 
   <div class="row">
-    <label>Mobile Number</label>
-    <input id="phone" type="tel" required placeholder="10-digit number" />
+    <label>Phone</label>
+    <input id="phone" required />
   </div>
 
   <div class="row">
     <label>Delivery Address</label>
-    <textarea id="address" required placeholder="Complete address with pincode"></textarea>
+    <textarea id="address" required></textarea>
   </div>
 
-  <button id="payBtn" disabled>
-    <span id="btnText">Initializing...</span>
-  </button>
+  <button id="payBtn" disabled>Pay Securely</button>
 </div>
 
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getFirestore, doc, setDoc, getDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+<script>
+/* ---------- LOAD ORDER FROM INDEX ---------- */
+const raw = sessionStorage.getItem('pendingOrder');
+if (!raw) {
+  alert('Invalid access');
+  location.href = 'index.html';
+}
 
-/* ==================== FIREBASE CONFIG ==================== */
-const firebaseConfig = {
-  apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
-  authDomain: "hamsasarees-24738.firebaseapp.com",
-  projectId: "hamsasarees-24738"
-};
+let order;
+try { order = JSON.parse(raw); }
+catch { location.href = 'index.html'; }
 
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const db = getFirestore(app);
-
-/* ==================== DOM ELEMENTS ==================== */
 const productEl = document.getElementById('product');
 const priceText = document.getElementById('priceText');
 const nameEl = document.getElementById('name');
@@ -274,54 +142,13 @@ const phoneEl = document.getElementById('phone');
 const addressEl = document.getElementById('address');
 const imgEl = document.getElementById('productImg');
 const payBtn = document.getElementById('payBtn');
-const btnText = document.getElementById('btnText');
-const errorMsg = document.getElementById('errorMsg');
 
-/* ==================== UTILITY FUNCTIONS ==================== */
-function showError(message) {
-  errorMsg.textContent = message;
-  errorMsg.classList.add('show');
-}
-
-function hideError() {
-  errorMsg.classList.remove('show');
-}
-
-function setBtnState(disabled, text) {
-  payBtn.disabled = disabled;
-  btnText.textContent = text;
-}
-
-function validatePhone(phone) {
-  return /^[6-9]\d{9}$/.test(phone);
-}
-
-/* ==================== LOAD ORDER DATA ==================== */
-const raw = sessionStorage.getItem('pendingOrder');
-if (!raw) {
-  showError('Invalid access. Redirecting...');
-  setTimeout(() => location.href = 'index.html', 2000);
-  throw new Error('No pending order');
-}
-
-let order;
-try {
-  order = JSON.parse(raw);
-} catch (e) {
-  showError('Invalid order data. Redirecting...');
-  setTimeout(() => location.href = 'index.html', 2000);
-  throw new Error('Invalid JSON');
-}
-
-/* ==================== VALIDATE ORDER DATA ==================== */
 const price = Number(order.price);
-if (!order.product || !price || price <= 0) {
-  showError('Invalid order details. Redirecting...');
-  setTimeout(() => location.href = 'index.html', 2000);
-  throw new Error('Invalid order');
+if (!price || price <= 0) {
+  alert('Invalid price');
+  location.href = 'index.html';
 }
 
-/* ==================== POPULATE FORM ==================== */
 productEl.value = order.product || '';
 priceText.textContent = `₹${price}`;
 nameEl.value = order.name || '';
@@ -330,191 +157,104 @@ addressEl.value = order.address || '';
 
 if (order.image) {
   imgEl.src = order.image;
-  imgEl.onload = () => imgEl.classList.add('show');
-  imgEl.onerror = () => console.warn('Failed to load product image');
+  imgEl.onload = () => imgEl.style.display = 'block';
 }
+</script>
 
-/* ==================== AUTH & PAYMENT HANDLER ==================== */
-onAuthStateChanged(auth, async (user) => {
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+/* ---------- FIREBASE ---------- */
+const app = initializeApp({
+  apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
+  authDomain: "hamsasarees-24738.firebaseapp.com",
+  projectId: "hamsasarees-24738"
+});
+
+const auth = getAuth(app);
+const db = getFirestore(app);
+
+/* ---------- AUTH + PAY ---------- */
+onAuthStateChanged(auth, user => {
   if (!user) {
-    showError('Please sign in first. Redirecting...');
-    setTimeout(() => location.href = 'index.html', 2000);
+    alert('Please sign in first');
+    location.href = 'index.html';
     return;
   }
 
-  // ✅ SECURITY: Verify price from Firestore product document
-  let verifiedPrice = price;
-  try {
-    if (order.productId) {
-      const productDoc = await getDoc(doc(db, 'products', order.productId));
-      if (productDoc.exists()) {
-        verifiedPrice = productDoc.data().price;
-        if (verifiedPrice !== price) {
-          showError(`Price mismatch! Current price is ₹${verifiedPrice}`);
-          priceText.textContent = `₹${verifiedPrice}`;
-          order.price = verifiedPrice;
-        }
-      }
-    }
-  } catch (e) {
-    console.warn('Could not verify price:', e);
-    // Continue with session price if verification fails
-  }
+  payBtn.disabled = false;
 
-  setBtnState(false, 'Pay Securely with Razorpay');
-  hideError();
-
-  payBtn.onclick = async () => {
+  payBtn.onclick = () => {
     const name = nameEl.value.trim();
-    const phone = phoneEl.value.replace(/\s+/g, '');
+    const phone = phoneEl.value.replace(/\s+/g,'');
     const address = addressEl.value.trim();
 
-    // Validation
-    if (!name || name.length < 2) {
-      showError('Please enter a valid name');
-      nameEl.focus();
+    if (!name || !/^[6-9]\d{9}$/.test(phone) || address.length < 10) {
+      alert('Enter valid name, phone and full address');
       return;
     }
 
-    if (!validatePhone(phone)) {
-      showError('Please enter a valid 10-digit mobile number starting with 6-9');
-      phoneEl.focus();
-      return;
-    }
+    payBtn.disabled = true;
+    payBtn.textContent = 'Processing...';
 
-    if (!address || address.length < 10) {
-      showError('Please enter complete delivery address');
-      addressEl.focus();
-      return;
-    }
-
-    hideError();
-    setBtnState(true, 'Processing...');
-
-    // Create order ID
-    const orderId = `HS${Date.now()}${Math.random().toString(36).substr(2, 5)}`.toUpperCase();
-
-    // ✅ SAVE ORDER TO FIRESTORE FIRST (before payment)
-    try {
-      await setDoc(doc(db, 'users', user.uid, 'orders', orderId), {
-        orderId: orderId,
-        product: order.product,
-        productId: order.productId || '',
-        price: verifiedPrice,
-        name: name,
-        phone: phone,
-        address: address,
-        image: order.image || '',
-        email: user.email || '',
-        userId: user.uid,
-        status: 'pending',
-        paymentId: null,
-        createdAt: serverTimestamp(),
-        updatedAt: serverTimestamp()
-      });
-    } catch (error) {
-      console.error('Failed to create order:', error);
-      showError('Failed to create order. Please try again.');
-      setBtnState(false, 'Pay Securely with Razorpay');
-      return;
-    }
-
-    // ✅ RAZORPAY PAYMENT
-    const rzpOptions = {
+    const rzp = new Razorpay({
       key: 'rzp_live_Rqulhc8rZRz8Iw',
-      amount: Math.round(verifiedPrice * 100),
+      amount: Math.round(price * 100),
       currency: 'INR',
       name: 'Hamsa Sarees',
       description: order.product,
-      order_id: undefined, // In production, get this from backend
-      prefill: {
-        name: name,
-        contact: phone,
-        email: user.email || ''
-      },
-      notes: {
-        order_id: orderId,
-        user_id: user.uid
-      },
-      theme: {
-        color: '#e6b566'
-      },
 
-      handler: async function(response) {
-        try {
-          // ✅ UPDATE ORDER STATUS
-          await setDoc(doc(db, 'users', user.uid, 'orders', orderId), {
-            paymentId: response.razorpay_payment_id,
-            status: 'paid',
-            paidAt: serverTimestamp(),
-            updatedAt: serverTimestamp()
-          }, { merge: true });
+      handler: async res => {
+        /* -------- FIRESTORE -------- */
+        await setDoc(
+          doc(db, 'users', user.uid, 'orders', crypto.randomUUID()),
+          {
+            product: order.product,
+            price,
+            name,
+            phone,
+            address,
+            image: order.image || '',
+            email: user.email,
+            paymentId: res.razorpay_payment_id,
+            status: 'PAID',
+            createdAt: serverTimestamp()
+          }
+        );
 
-          // ✅ SUBMIT TO GOOGLE FORMS (backup)
-          const formData = new FormData();
-          formData.append('entry.2120009411', name);
-          formData.append('entry.6103303', phone);
-          formData.append('entry.952475985', order.product);
-          formData.append('entry.2008322116', address);
-          formData.append('entry.135044268', verifiedPrice);
+        /* -------- GOOGLE FORM (MAIN ENTRY) -------- */
+        const fd = new FormData();
+        fd.append('entry.2120009411', name);
+        fd.append('entry.6103303', phone);
+        fd.append('entry.952475985', order.product);
+        fd.append('entry.2008322116', address);
+        fd.append('entry.135044268', price);
 
-          fetch('https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse', {
-            method: 'POST',
-            body: formData,
-            mode: 'no-cors'
-          }).catch(e => console.warn('Form submission failed:', e));
+        fetch('https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse', {
+          method: 'POST',
+          body: fd,
+          mode: 'no-cors'
+        });
 
-          // Clear session
-          sessionStorage.removeItem('pendingOrder');
-
-          // Success redirect
-          alert('✅ Payment successful! Thank you for your order.');
-          location.href = 'yourorders.html';
-
-        } catch (error) {
-          console.error('Post-payment error:', error);
-          alert('Payment received but order update failed. Please contact support with Payment ID: ' + response.razorpay_payment_id);
-          location.href = 'yourorders.html';
-        }
-      },
-
-      modal: {
-        ondismiss: function() {
-          setBtnState(false, 'Pay Securely with Razorpay');
-        }
+        sessionStorage.removeItem('pendingOrder');
+        alert('Payment successful!');
+        location.href = 'yourorders.html';
       }
-    };
+    });
 
-    try {
-      const rzp = new Razorpay(rzpOptions);
+    rzp.on('payment.failed', () => {
+      alert('Payment failed');
+      payBtn.disabled = false;
+      payBtn.textContent = 'Pay Securely';
+    });
 
-      rzp.on('payment.failed', async function(response) {
-        console.error('Payment failed:', response.error);
-        
-        // Update order status to failed
-        try {
-          await setDoc(doc(db, 'users', user.uid, 'orders', orderId), {
-            status: 'failed',
-            failureReason: response.error.description || 'Payment failed',
-            updatedAt: serverTimestamp()
-          }, { merge: true });
-        } catch (e) {
-          console.error('Failed to update order status:', e);
-        }
-
-        showError('Payment failed: ' + (response.error.description || 'Unknown error'));
-        setBtnState(false, 'Retry Payment');
-      });
-
-      rzp.open();
-    } catch (error) {
-      console.error('Razorpay error:', error);
-      showError('Payment gateway error. Please try again.');
-      setBtnState(false, 'Pay Securely with Razorpay');
-    }
+    rzp.open();
   };
 });
 </script>
 
 </body>
 </html>
+
