--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@ const payload = {
   createdAt: serverTimestamp()
 };
 
-        await setDoc(collection(db, 'products'), productName);
+        await setDoc(collection(db, 'products'), payload);
         toast('Product added');
 
         // Reset fields
